# currency-rate

./: .gitignore  .pre-commit-config copy.yaml  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  pyproject.toml
cyrates/agent/: const.py  fastresult.py  handler.py  prettyprint.py
cyrates/bot/: bot.py  const.py  dummy_server.py
cyrates/parsing/: const.py  extractor.py  fastresult.py  prettyprint.py
notebooks/: _dev.ipynb
tests/parsing/: test_extractor.py
