[tool.poetry]
name = "currency-rate"
version = "0.1.0"
description = "Pure python for now"
authors = ["Max Povod <ms.povod@gmail.com>"]
packages = [
    {include = "cyrates"}
]

[tool.poetry.dependencies]
python = "~3.11"               # <- typing, warnings
pyspark = "^3.4.0"             #
pandas = "^2.2.3"              # <- numpy
requests = "^2.28.1"           #
beautifulsoup4 = "^4.11.1"     #
ipykernel = "^6.29.5"
numpy = "^2.1.3"
lxml = "^5.3.0"
python-telegram-bot = "^21.1"
nest-asyncio = "^1.6.0"
openai = "^1.55.3"
tabulate = "^0.9.0"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
rates = "cyrates.agent.fastresult:launch"
bot = "cyrates.bot.bot:main"
